plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok:1.18.32' //컴파일 할 떄 Lombok 실행


    runtimeOnly 'com.mysql:mysql-connector-j'
    //아래 추가함
    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'     //  서명 구현체
    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5' //Jackson 직렬화 바인더
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    //아래 추가함
    implementation 'at.favre.lib:bcrypt:0.10.2' //Bcrypt로 인코딩하기 위한 의존성 입니다.
}

tasks.named('test') {
    useJUnitPlatform()
}
